--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -30,8 +30,8 @@ button {
   &:hover {
     @extend button;
   }
-  &:focus{
-    @extend button
+  &:focus {
+    @extend button;
   }
 }
 
@@ -63,7 +63,7 @@ body {
   padding-bottom: 85px;
   font-family: $oswald;
   text-transform: capitalize;
-  @media(max-width: 575px) {
+  @media (max-width: 575px) {
     font-size: 52px;
   }
 }
@@ -136,7 +136,7 @@ input:required {
   display: flex !important;
   justify-content: center;
   padding-top: 60px;
-  @media(max-width:1024px) {
+  @media (max-width: 1024px) {
     bottom: -75px;
   }
   li {
@@ -165,8 +165,8 @@ input:required {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 90px !important; 
-  @media(max-width:1024px){
+  margin-bottom: 90px !important;
+  @media (max-width: 1024px) {
     padding-bottom: 35px;
   }
   li {
@@ -176,11 +176,10 @@ input:required {
     margin: 0px 16px;
     border-radius: 50%;
     background-color: transparent;
-   
     transition: all 0.6s ease-in-out;
     position: relative;
 
-    @media(max-width: 575px) {
+    @media (max-width: 575px) {
       margin: 0px 4px;
     }
     a {
@@ -228,7 +227,7 @@ input:required {
 }
 
 // fonts function
-@mixin fonts_style($size,$l_height,$weight,$family) {
+@mixin fonts_style($size, $l_height, $weight, $family) {
   font-size: $size;
   line-height: $line_height;
   font-weight: $weight;
@@ -236,31 +235,31 @@ input:required {
 }
 
 @mixin laptop {
-  @media(min-width: 1200px) and (max-width: 1600px) {
-      @content;
+  @media (min-width: 1200px) and (max-width: 1600px) {
+    @content;
   }
 }
 
 @mixin lg {
-  @media(min-width: 992px) and (max-width: 1199px) {
-      @content;
+  @media (min-width: 992px) and (max-width: 1199px) {
+    @content;
   }
 }
 
 @mixin md {
-  @media(min-width: 768px) and (max-width: 991px) {
-      @content;
+  @media (min-width: 768px) and (max-width: 991px) {
+    @content;
   }
 }
 
 @mixin sm {
-  @media(max-width: 767px) {
-      @content;
+  @media (max-width: 767px) {
+    @content;
   }
 }
 
 @mixin xs {
-  @media(max-width: 575px) {
-      @content;
+  @media (max-width: 575px) {
+    @content;
   }
 }
