--- a/assets/scss/_joinus.scss
+++ b/assets/scss/_joinus.scss
@@ -1,54 +1,62 @@
-#joinus-contact_area{
-    
-    padding-bottom: 197px;
-    .contact_form{
-        .form-row input {
-            border: 0;
-            border-bottom: 1px solid #ddd;
-            padding: 30px 10px;
-            outline: none;
-            margin: 20px 0;
-            &.form-control {
-                background-clip: unset;
-            }
-        }
-        .subject{
-            width: 100%;
-            border: 0;
-            border-bottom: 1px solid #ddd;
-            padding: 30px 10px;
-            outline: none;
-            margin: 20px 0;
-        }
+#joinus-contact_area {
+  position: relative;
+  padding-bottom: 197px;
+  .contact_form {
+    .form-row input {
+      border: 0;
+      border-bottom: 1px solid #ddd;
+      padding: 30px 10px;
+      outline: none;
+      margin: 20px 0;
+      &.form-control {
+        background-clip: unset;
+      }
     }
-    textarea{
-        width: 100%;
-        border: 0;
-        border-bottom: 1px solid #ddd;
-        padding: 30px 10px;
-        outline: none;
-        margin: 20px 0;
+    .subject {
+      width: 100%;
+      border: 0;
+      border-bottom: 1px solid #ddd;
+      padding: 30px 10px;
+      outline: none;
+      margin: 20px 0;
     }
-    button{
-        margin-top: 25px;
-        font-size: 12px;
-        line-height: 14px;
-        letter-spacing: 2.1px;
-        color: $black;
-        border: 2px solid $black;
-        padding: 16px;
-        font-weight: $semi_bold;
-        text-transform: uppercase;
-        display: inline-block;
-        outline: none;
-        transition: .3s;
-        -webkit-transition: .3s;
-        -moz-transition: .3s;
-        -ms-transition: .3s;
-        -o-transition: .3s;
-}
-    button:hover{
-        border: 2px solid transparent;
-
+  }
+  textarea {
+    width: 100%;
+    border: 0;
+    border-bottom: 1px solid #ddd;
+    padding: 30px 10px;
+    outline: none;
+    margin: 20px 0;
+  }
+  button {
+    margin-top: 25px;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 2.1px;
+    color: $black;
+    border: 2px solid $black;
+    padding: 16px;
+    font-weight: $semi_bold;
+    text-transform: uppercase;
+    display: inline-block;
+    outline: none;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+  }
+  button:hover {
+    border: 2px solid transparent;
+  }
+  .round_shape_img {
+    position: absolute;
+    z-index: -1;
+    top: -90%;
+    left: -50%;
+    img {
+      max-width: 100%;
     }
+  }
 }
