--- a/assets/scss/_testimonial.scss
+++ b/assets/scss/_testimonial.scss
@@ -3,6 +3,7 @@
   padding-top: 178px;
   padding-bottom: 310px;
   position: relative;
+  z-index: 1;
   .tes-title {
     h2 {
       text-transform: capitalize;
@@ -19,15 +20,15 @@
         line-height: 55px;
         font-weight: 300;
         padding-bottom: 30px;
-        @media(max-width: 767px) {
+        @media (max-width: 767px) {
           font-size: 18px;
           line-height: 38px;
         }
-        @media(max-width: 575px) {
+        @media (max-width: 575px) {
           font-size: 14px;
         }
       }
-      .client_name{
+      .client_name {
         font-size: 20px;
         line-height: 44px;
         margin-bottom: 0px;
@@ -40,30 +41,30 @@
         margin-top: -10px;
       }
     }
-    .slick-dots{
-      transform: translate(-55%,-12px);
-      li{
+    .slick-dots {
+      transform: translate(-55%, -12px);
+      li {
         border: 1px solid $white;
-        &.slick-active{
+        &.slick-active {
           background-color: $white;
         }
       }
     }
-    .slick-arrow{
-    font-size: 0px;
-    background: transparent;
-    position: absolute;
-    bottom: 0px;
-    @media(max-width:1024px) {
-      bottom: 50px;
-    }
-    &.slick-prev{
-      // left: 0px;
-      transform: translate(400px, 116px);
-    }
-    &.slick-next{
-      transform: translate(633px, 116px);
-    }
+    .slick-arrow {
+      font-size: 0px;
+      background: transparent;
+      position: absolute;
+      bottom: 0px;
+      @media (max-width: 1024px) {
+        bottom: 50px;
+      }
+      &.slick-prev {
+        // left: 0px;
+        transform: translate(400px, 116px);
+      }
+      &.slick-next {
+        transform: translate(633px, 116px);
+      }
     }
     .slick-prev:before,
     .slick-next:before {
@@ -72,20 +73,18 @@
       outline: none;
       text-transform: capitalize;
     }
-    
+
     .slick-prev:before {
-     content: 'Previous Clients';
+      content: 'Previous Clients';
     }
     .slick-next:before {
       content: 'Next Clients';
-     
     }
-    
   }
-  .qoute_img{
+  .qoute_img {
     position: absolute;
-    content: "";
-    top: 34%;
-    left: 7%;
+    content: '';
+    top: 35%;
+    left: 13%;
   }
 }
