fixed some issues on home page

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -2,6 +2,12 @@ header {
   background-color: $white;
   position: relative;
   border-bottom: 2px solid $primary;
+  position: sticky;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  z-index: 99999;
+ 
   .container {
     .head_content {
       display: flex;
